# plonk-verifier

./: .gitignore  Cargo.toml
circom-verifier/: Cargo.toml  README.md
circom-verifier/src/: accumulation.rs  main.rs
snark-verifier/: Cargo.toml
snark-verifier/src/: lib.rs  system.rs
snark-verifier/src/loader/: evm.rs
snark-verifier/src/system/: circom.rs
snark-verifier/src/system/circom/: test.rs  transcript.rs
snark-verifier/src/system/circom/test/: evm.rs  testdata.rs
snark-verifier/src/system/circom/transcript/: evm.rs  halo2.rs
snark-verifier/src/util/: arithmetic.rs
src/: util.rs
src/loader/: halo2.rs
src/system/: circom.rs
src/util/: accumulation.rs
